--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Banco local - iead
@@ -5,3 +6,10 @@ spring.datasource.url= jdbc:mysql://localhost:3306/iead
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=testparaprogramas5@gmail.com
+spring.mail.password=oawuaxhcjupbznuy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
