Adicionado envio de e-mail ao realizar o post do evento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=testparaprogramas5@gmail.com
 spring.mail.password=oawuaxhcjupbznuy
+destinatario.email=gribeiro.office@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
