--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 server.port=8080
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 #Banco local - iead
 spring.datasource.url= jdbc:mysql://localhost:3306/iead
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
