--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=testparaprogramas5@gmail.com
-spring.mail.password=oawuaxhcjupbznuy
-destinatario.email=gribeiro.office@gmail.com
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=testparaprogramas5@gmail.com
+#spring.mail.password=oawuaxhcjupbznuy
+#destinatario.email=gribeiro.office@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
