--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.18.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
