--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 
 #Banco local - iead
-spring.datasource.url= jdbc:mysql://localhost:3306/iead
+spring.datasource.url= jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
@@ -10,11 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=testparaprogramas5@gmail.com
-#spring.mail.password=oawuaxhcjupbznuy
-#destinatario.email=gribeiro.office@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
